- home redirection when login - fixed login modal size - fix Transaction header margins - details modal hide scrollbar - hide delete button in user table

--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -241,7 +241,7 @@ a {
 }
 
 @media (min-width: 480px){
-    .modal-dialog {
+    .login-modal-main-container {
         max-width: 300px;
         margin: 1.75rem auto;
     }
