--- a/src/components/Users/style.css
+++ b/src/components/Users/style.css
@@ -251,7 +251,12 @@ table.table {
 
 
 @media (min-width: 480px) {
-    .modal-details-component {
+    /* .modal-details-component {
         max-width: 435px !important;
-    }
+    } */
 }
+
+.admin-modal-details::-webkit-scrollbar { 
+    /* WebKit */   
+    display: none;
+} 
